[package]
name = "handler"
version = "0.1.0"
authors = ["Lei Zhengyu"]
edition = "2021"

[dependencies]
chitu = { path = "../chitu/chitu" }
chitu-macros = { path = "../chitu/chitu-macros" }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.17.2" 
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["collector_client", "isahc", "rt-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23.0", features = ["aio", "tokio-comp"] }
bincode = "1.3.3"