[package]
name = "chitu"
authors = ["Lei Zhengyu"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dashmap = "5.4.0"
nix = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.17.2" 
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["collector_client", "isahc", "rt-tokio", "reqwest_collector_client"] }
chitu-macros = { path = "../chitu-macros" }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.8.5"
chrono = "0.4"
redis = { version = "0.23.0", features = ["aio", "tokio-comp"] }